# palestra-fastapi

./: .env.example  Dockerfile  README.md  docker-compose.yml  docs.md  main.py  pyproject.toml  sql_app.db
app/: dependencies.py  main.py
app/domain/: schemas.py
app/infra/crud/: __init__.py
app/infra/db/: base.py  get_db.py
app/infra/models/: __init__.py  user_model.py
app/tests/domain/: schemas_test.py
app/tests/utils/: is_true_test.py
infra/crud/: __init__.py
infra/db/: get_db.py
infra/models/: user_model.py
