[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = ""
authors = ["Gabriel Nogueira <gabriel.nsilva@yduqs.com.br>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
