[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = ""
authors = ["Gabriel Nogueira <gabriel.nsilva@yduqs.com.br>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
psycopg = "^3.1.19"
httpx = "^0.27.0"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
